--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path_provider: ^2.1.5
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.14.3
+  intl: ^0.20.2
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
