--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.20.2
   printing: ^5.14.2
   pdf: ^3.11.3
+  google_fonts: ^6.2.1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
