--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   pdf: ^3.11.3
   google_fonts: ^6.2.1
   animate_do: ^4.2.0
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -72,8 +74,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/splash-removebg-preview.png
-    - assets/images/KasirKu.png
     - assets/images/GW-TUH.jpg
     - assets/images/KasirKu-Icon.png
     - assets/images/KasirKu-Rezize.png
@@ -81,6 +81,7 @@ flutter:
     - assets/animation/Animasi-2.json
     - assets/animation/Animasi-3.json
     - assets/animation/Animasi-4.json
+    - assets/animation/Animasi-5.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
